--- a/index.html
+++ b/index.html
@@ -1,1 +1,126 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>FTHP</title>
+<style>
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
+    line-height: 1.7;
+    color: #222;
+  }
+  .hero {
+    position: relative;
+    height: 100vh;
+    background: url("images/hero.jpg") center/cover no-repeat;
+  }
+  .hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0,0,0,0.35);
+  }
+  .hero-text {
+    position: absolute;
+    bottom: 15%;
+    left: 7%;
+    right: 7%;
+    color: #fff;
+  }
+  .hero-text h1 {
+    font-size: 1.8rem;
+    margin-bottom: 0.5em;
+  }
+  .hero-text p {
+    font-size: 1rem;
+  }
+  section {
+    padding: 48px 20px;
+    max-width: 720px;
+    margin: auto;
+  }
+  h2 {
+    font-size: 1.4rem;
+    margin-bottom: 16px;
+  }
+  .card {
+    margin-bottom: 32px;
+  }
+  .card img {
+    width: 100%;
+    border-radius: 8px;
+    margin-bottom: 12px;
+  }
+  footer {
+    background: #f5f5f5;
+    padding: 32px 20px;
+    text-align: center;
+    font-size: 0.9rem;
+  }
+</style>
+</head>
 
+<body>
+
+<!-- ファーストビュー -->
+<div class="hero">
+  <div class="hero-text">
+    <h1>「伝えたい」を、押せるかたちに</h1>
+    <p>
+      重い障害のある子どもたちが、<br>
+      自分の意思を伝えるための支援を行っています
+    </p>
+  </div>
+</div>
+
+<!-- 団体概要 -->
+<section>
+  <h2>FTHPについて</h2>
+  <p>
+    FTHPは、肢体不自由や重度障害のある子どもたちが、<br>
+    スイッチや支援機器を使って「意思表示」できるよう支援する活動です。
+  </p>
+</section>
+
+<!-- 活動内容 -->
+<section>
+  <h2>どんな支援をしているか</h2>
+
+  <div class="card">
+    <img src="images/activity1.jpg" alt="">
+    <p>
+      子どもの身体の動きに合わせて、<br>
+      押せるスイッチや入力方法を一緒に探します。
+    </p>
+  </div>
+
+  <div class="card">
+    <img src="images/activity2.jpg" alt="">
+    <p>
+      「押せた」「伝わった」という経験を重ねることで、<br>
+      子ども自身の意欲や表情が変わっていきます。
+    </p>
+  </div>
+</section>
+
+<!-- 意義 -->
+<section>
+  <h2>なぜ必要なのか</h2>
+  <p>
+    言葉や動きで意思を伝えることが難しくても、<br>
+    「伝えたい気持ち」がなくなるわけではありません。
+  </p>
+  <p>
+    伝える手段を持つことは、<br>
+    子どもが社会とつながる第一歩になります。
+  </p>
+</section>
+
+<footer>
+  © FTHP
+</footer>
+
+</body>
+</html>
