--- a/index.html
+++ b/index.html
@@ -5,118 +5,131 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>FTHP｜遊びの支援活動</title>
   <style>
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                   "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
-      color: #333;
-      background: #f7f9fc;
-      line-height: 1.7;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
-    .container {
-      max-width: 960px;
-      margin: 0 auto;
-      padding: 0 16px;
-    }
-    .hero {
-      background: url("images/hero.jpg") center/cover no-repeat;
-      color: #fff;
-      padding: 64px 16px 72px;
-    }
-    .hero h1 {
-      font-size: 1.8rem;
-      margin-bottom: 12px;
-    }
-    .hero p {
-      font-size: 1rem;
-      margin-bottom: 24px;
-    }
-    .hero .buttons a {
-      display: inline-block;
-      margin-right: 12px;
-      padding: 10px 18px;
-      border-radius: 999px;
-      text-decoration: none;
-      font-size: 0.95rem;
-    }
-    .btn-primary {
-      background: #ffd84d;
-      color: #333;
-    }
-    .btn-secondary {
-      background: #7ec3ff;
-      color: #fff;
-    }
+/* ==========
+   全体設定
+   ========== */
 
-    section {
-      padding: 48px 0;
-      background: #fff;
-      margin-bottom: 12px;
-    }
-    section h2 {
-      font-size: 1.4rem;
-      margin-bottom: 16px;
-    }
+* {
+  box-sizing: border-box;
+}
 
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 16px;
-      margin-top: 24px;
-    }
-    .card {
-      background: #f2f6fb;
-      border-radius: 12px;
-      padding: 16px;
-      text-align: center;
-    }
-    .card img {
-      margin: 0 auto 12px;
-    }
+body {
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
+  color: #333;
+  line-height: 1.7;
+  background: #fff;
+}
 
-    .support {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 24px;
-      align-items: center;
-    }
-    .support + .support {
-      margin-top: 32px;
-    }
+/* ==========
+   共通余白ルール
+   ========== */
 
-    .cta {
-      background: #eef5ff;
-      text-align: center;
-      padding: 56px 16px;
-    }
-    .cta a {
-      display: inline-block;
-      margin-top: 16px;
-      padding: 12px 24px;
-      background: #ffd84d;
-      border-radius: 999px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
+section {
+  padding: 0 16px;
+  margin-bottom: 32px;
+}
 
-    @media (max-width: 600px) {
-      .hero {
-        padding: 48px 16px 56px;
-      }
-      .hero h1 {
-        font-size: 1.5rem;
-      }
-      .support {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+p {
+  margin: 0 0 12px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+/* ==========
+   見出し
+   ========== */
+
+h1 {
+  font-size: 1.6rem;
+  margin: 24px 0 12px;
+  line-height: 1.4;
+}
+
+h2 {
+  font-size: 1.3rem;
+  margin: 24px 0 12px;
+}
+
+h3 {
+  font-size: 1.1rem;
+  margin: 16px 0 8px;
+}
+
+/* ==========
+   ヒーローエリア
+   ========== */
+
+.hero {
+  padding: 32px 16px;
+  text-align: center;
+}
+
+.hero p {
+  margin-bottom: 16px;
+}
+
+/* ボタン */
+
+.button,
+button {
+  display: inline-block;
+  padding: 12px 20px;
+  border-radius: 24px;
+  background: #f4c542;
+  color: #333;
+  text-decoration: none;
+  font-weight: 600;
+  margin: 8px 4px;
+}
+
+/* ==========
+   カード（イラスト＋説明）
+   ========== */
+
+.card {
+  background: #fafafa;
+  border-radius: 16px;
+  padding: 16px;
+  margin-bottom: 20px;
+}
+
+.card img {
+  width: 100%;
+  height: auto;
+  border-radius: 12px;
+  margin-bottom: 8px;
+}
+
+.card p {
+  margin-bottom: 0;
+}
+
+/* ==========
+   リスト・補助要素
+   ========== */
+
+ul {
+  margin: 0 0 12px;
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 6px;
+}
+
+/* ==========
+   最後のCTA
+   ========== */
+
+.cta {
+  text-align: center;
+  padding: 24px 16px 40px;
+}
+
+</style> 
 </head>
 <body>
 
